Add a homepage component with dummy data

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Code Hunt</title>
+    <link rel="stylesheet" href="/css/stylesheet.css">
+    <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
   </head>
   <body>
     <div id="root"></div>
